--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,8 @@
     "arrow-parens": "off",
     "comma-dangle": "off",
     "require-jsdoc": "off",
-    "operator-linebreak": "off"
+    "operator-linebreak": "off",
+    "no-debugger": "warn"
   },
   "extends": ["eslint:recommended", "google"]
 }
