--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,8 @@
   "env": {
     "es6": true,
     "browser": true,
-    "node": true
+    "node": true,
+    "jest/globals": true
   },
   "rules": {
     "semi": "off",
@@ -16,5 +17,6 @@
     "no-unused-vars": "warn",
     "no-unreachable": "warn"
   },
+  "plugins": ["jest"],
   "extends": ["eslint:recommended", "google"]
 }
