--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Pure JavaScript Excel Application",
   "main": "webpack.config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "start": "cross-env NODE_ENV=development webpack-dev-server --open",
     "build": "cross-env NODE_ENV=production webpack --mode production",
     "lint": "npx eslint ./src"
@@ -41,7 +42,9 @@
     "eslint": "^7.11.0",
     "eslint-config-google": "^0.14.0",
     "eslint-loader": "^4.0.2",
+    "eslint-plugin-jest": "^24.1.0",
     "html-webpack-plugin": "^4.5.0",
+    "jest": "^26.6.0",
     "mini-css-extract-plugin": "^1.0.0",
     "sass": "^1.27.0",
     "sass-loader": "^10.0.3",
